# BarePi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  barepi.ld
cmake/: raspi-toolchain.cmake
doc/: qemu.md
includes/: archdef.h  semihost.h
includes/barepi/: archdef.h  interruptstub.h  memory.h  multicore.h  semihost.h
includes/barepi/console/: console.h  semiconsole.h
linker/: barepi.ld  raspi32.ld  raspi64.ld
scripts/: emulate.sh
src/: CMakeLists.txt  multicore.c  semihost.c  start.S  start.c  systemcall.c
src/console/: console.c  semiconsole.c
src/start/: start.S  start64.S
test/: CMakeLists.txt  main.c
